--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
     <button id="next-fact">Show Me a Fact</button>
   </section>
 
+  <!-- NEW User Mood Check Feature -->
+<section id="mood-check">
+    <h2>How Does Social Media Make You Feel?</h2>
+    <label for="mood-select">Select Your Mood:</label>
+    <select id="mood-select">
+      <option value="">--Choose One--</option>
+      <option value="happy">Happy</option>
+      <option value="inspired">Inspired</option>
+      <option value="anxious">Anxious</option>
+      <option value="overwhelmed">Overwhelmed</option>
+    </select>
+    <p id="mood-response"></p>
+</section>
+
   <footer>
     <p>&copy; 2025 Social Media Impact Project</p>
   </footer>
